Closed
Bug 531792
Opened 16 years ago
Closed 16 years ago
crash [@ nsImapMailFolder::UpdateImapMailboxInfo(nsIImapProtocol*, nsIMailboxSpec*)]
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(thunderbird3.1 beta1-fixed, thunderbird3.0 .2-fixed)
RESOLVED
FIXED
Thunderbird 3.1b1
Tracking | Status | |
---|---|---|
thunderbird3.1 | --- | beta1-fixed |
thunderbird3.0 | --- | .2-fixed |
People
(Reporter: wsmwk, Assigned: rkent)
Details
(Keywords: crash, fixed-seamonkey2.0.4)
Crash Data
Attachments
(1 file)
924 bytes,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
standard8
:
approval-thunderbird3.0.2+
|
Details | Diff | Splinter Review |
crash [@ nsImapMailFolder::UpdateImapMailboxInfo]
most of the crashes are Mac
xref bug 257079
bp-5f8166a3-667a-4b98-bf13-bf14f2091125 Mac v3.0
"removed accounts and it crashed (Thunderbird was just downloading emails from email servers...)"
0 thunderbird-bin nsImapMailFolder::UpdateImapMailboxInfo mailnews/imap/src/nsImapMailFolder.cpp:2749
1 libxpcom_core.dylib libxpcom_core.dylib@0x667e0
2 libxpcom_core.dylib nsProxyObjectCallInfo::Run xpcom/proxy/src/nsProxyEvent.cpp:181
3 libxpcom_core.dylib nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:521
4 libxpcom_core.dylib NS_ProcessNextEvent_P nsThreadUtils.cpp:236
5 thunderbird-bin nsXULWindow::ShowModal xpfe/appshell/src/nsXULWindow.h:415
6 thunderbird-bin nsWindowWatcher::OpenWindowJSInternal embedding/components/windowwatcher/src/nsWindowWatcher.cpp:992
7 thunderbird-bin nsWindowWatcher::OpenWindowJS embedding/components/windowwatcher/src/nsWindowWatcher.cpp:487
8 thunderbird-bin nsGlobalWindow::OpenInternal dom/src/base/nsGlobalWindow.cpp:7364
9 thunderbird-bin nsGlobalWindow::OpenDialog dom/src/base/nsGlobalWindow.cpp:5157
10 libxpcom_core.dylib libxpcom_core.dylib@0x667e0
11 thunderbird-bin XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:2456
12 thunderbird-bin XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1590
13 libmozjs.dylib js_Invoke js/src/jsinterp.cpp:1386
14 libmozjs.dylib js_Interpret js/src/jsinterp.cpp:5179
15 libmozjs.dylib js_Invoke js/src/jsinterp.cpp:1394
16 libmozjs.dylib js_InternalInvoke js/src/jsinterp.cpp:1447
17 libmozjs.dylib JS_CallFunctionValue js/src/jsapi.cpp:5187
18 thunderbird-bin nsJSContext::CallEventHandler dom/src/base/nsJSEnvironment.cpp:2085
bp-f8f0b575-518a-4d20-99d4-221f82091008 Mac 3.0b4
0 thunderbird-bin nsImapMailFolder::UpdateImapMailboxInfo mailnews/imap/src/nsImapMailFolder.cpp:2738
1 libxpcom_core.dylib NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/unix/xptcinvoke_unixish_x86.cpp:179
2 libxpcom_core.dylib nsProxyObjectCallInfo::Run xpcom/proxy/src/nsProxyEvent.cpp:181
3 libxpcom_core.dylib nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:521
4 libxpcom_core.dylib NS_ProcessNextEvent_P nsThreadUtils.cpp:227
5 thunderbird-bin nsXULWindow::ShowModal ubstring.h:415
6 thunderbird-bin nsWindowWatcher::OpenWindowJSInternal embedding/components/windowwatcher/src/nsWindowWatcher.cpp:992
7 thunderbird-bin nsWindowWatcher::OpenWindowJS embedding/components/windowwatcher/src/nsWindowWatcher.cpp:487
8 thunderbird-bin nsGlobalWindow::OpenInternal dom/src/base/nsGlobalWindow.cpp:7364
9 thunderbird-bin nsGlobalWindow::OpenDialog dom/src/base/nsGlobalWindow.cpp:5157
Assignee | ||
Comment 1•16 years ago
|
||
This crash has an easy fix with a null check.
I'll try to get to it when I am in mailnews dev mode again, but if someone else wants to do it I would not be offended.
Assignee: nobody → kent
Status: NEW → ASSIGNED
Assignee | ||
Comment 2•16 years ago
|
||
Assignee | ||
Comment 3•16 years ago
|
||
Comment on attachment 424846 [details] [diff] [review]
Check for null and error
I'm not sure how I would write a test for this.
Attachment #424846 -
Flags: superreview?(bienvenu)
Attachment #424846 -
Flags: review?(bienvenu)
Comment 4•16 years ago
|
||
Comment on attachment 424846 [details] [diff] [review]
Check for null and error
yes, since we don't have a reproducible case for the error, we can't easily write a unit test. But the existing unit tests still pass.
Attachment #424846 -
Flags: superreview?(bienvenu)
Attachment #424846 -
Flags: superreview+
Attachment #424846 -
Flags: review?(bienvenu)
Attachment #424846 -
Flags: review+
Assignee | ||
Comment 5•16 years ago
|
||
Comment on attachment 424846 [details] [diff] [review]
Check for null and error
Checked in http://hg.mozilla.org/comm-central/rev/745e15280cbe
Assignee | ||
Updated•16 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.1b1
Assignee | ||
Updated•16 years ago
|
Attachment #424846 -
Flags: approval-thunderbird3.0.2?
Assignee | ||
Updated•16 years ago
|
status-thunderbird3.0:
--- → ?
Comment 6•15 years ago
|
||
Correcting subject line so this hopefully gets picked up correctly in crash-stats.
Summary: crash [@ nsImapMailFolder::UpdateImapMailboxInfo] → crash [@ nsImapMailFolder::UpdateImapMailboxInfo(nsIImapProtocol*, nsIMailboxSpec*)]
Updated•15 years ago
|
Attachment #424846 -
Flags: approval-thunderbird3.0.2? → approval-thunderbird3.0.2+
Comment 7•15 years ago
|
||
No need to set status-thunderbird3.0 to ? at the same time as requesting approval, as approval requests are the things watched most, and at the approval stage it generally doesn't need any action (in other words: approval requests are examined before each release, setting status flag doesn't add anything).
status-thunderbird3.0:
? → ---
Assignee | ||
Comment 8•15 years ago
|
||
"No need to set status-thunderbird3.0 to ?"
The issue with this is that I need a field that I can set on bugs that I can use for my searches, so that I see bugs that are assigned to me, marked FIXED, but still have steps needed. What would you suggest?
Comment 9•15 years ago
|
||
(In reply to comment #8)
> "No need to set status-thunderbird3.0 to ?"
>
> The issue with this is that I need a field that I can set on bugs that I can
> use for my searches, so that I see bugs that are assigned to me, marked FIXED,
> but still have steps needed. What would you suggest?
Given that you've got the approval flag set in this case, then "Flag" "contains the string" "approval-thunderbird3.0" (which would cover any .x string and +/?). You probably also know you can then filter out "status-thunderbird3.0" "does not contain the string" "fixed".
Though if you want to discuss this more (and I'm happy to explore options), lets do it over irc.
Assignee | ||
Comment 10•15 years ago
|
||
Comment on attachment 424846 [details] [diff] [review]
Check for null and error
Checked in http://hg.mozilla.org/releases/comm-1.9.1/rev/7128a4ea7000
Assignee | ||
Updated•15 years ago
|
status-thunderbird3.0:
--- → .2-fixed
status-thunderbird3.1:
--- → beta1-fixed
![]() |
||
Updated•15 years ago
|
Keywords: fixed-seamonkey2.0.4
Updated•14 years ago
|
Crash Signature: [@ nsImapMailFolder::UpdateImapMailboxInfo(nsIImapProtocol*, nsIMailboxSpec*)]
You need to log in
before you can comment on or make changes to this bug.
Description
•