Bug 531792 crash [@ nsImapMailFolder::UpdateImapMailboxInfo], r/sr=bienvenu